# gpt_sovits_rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build-and-run.sh  build.rs  config.sh  config.toml  docker-compose.yml  entrypoint.sh  gpt_sovits.service  start_gpt_sovits.sh  status_gpt_sovits.sh  stop_gpt_sovits.sh  新建 文本文档.txt
.cargo/: config.toml
examples/: infer.rs
src/: lib.rs  main.rs  voice_manager.rs
src/.ipynb_checkpoints/: main-checkpoint.rs
