[package]
name = "gpt_sovits_rs"
version = "0.2.4"
edition = "2021"
description = "A GPT_Sovits inference lib in Rust base on pytorch"
license = "MIT"
repository = "https://github.com/second-state/gpt_sovits_rs"
authors = ["csh <458761603@qq.com>"]

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.87"
# ort = "1.16.3"
tokenizers = { version = "0.20.0", features = ["http"] }
tch = "=0.18.0"
tokio = { version = "*", features=["full"]}
pinyin = "0.10.0"
wav_io = "0.1.14"
serde_json = "1.0"
jieba-rs = { version = "0.7", features = ["tfidf", "textrank"] }
grapheme_to_phoneme = "0.1"
log = "0.4.22"
env_logger = "0.11.5"
text-splitter = "0.18"
lazy_static = "1.5.0"
regex = "1.11.0"
pest = "2.7"
pest_derive = "2.7"
crypto = { version="0.5.1", features=["digest"]}
rust-crypto = "0.2.36"
sha2 = "0.10.6"
hex = "0.4.3"
toml = "0.8.8"
[dev-dependencies]
pinyin = "0.10.0"
